Update config style and readme. Add config check.

--- a/config.json
+++ b/config.json
@@ -1,12 +1,18 @@
 {
-    "twitter":{
-        "consumer_key":"9QPsuGkqFUxwdcxr9d5P14hSC",
-        "consumer_secret":"TFAXgfpPLKIm6mXUaiFRa595PNPNkGbLwwSfmrVtuMFZXrxpnl",
-        "access_token_key":"",
-        "access_token_secret":"",
-        "_data":null
-    },
-    "discord":{
-        "token":""
-    }
+	"twitter": {
+		"consumer_key": "9QPsuGkqFUxwdcxr9d5P14hSC",
+		"consumer_secret": "TFAXgfpPLKIm6mXUaiFRa595PNPNkGbLwwSfmrVtuMFZXrxpnl",
+		"access_token_key": "",
+		"access_token_secret": "",
+		"_data": null
+	},
+	"discord": {
+		"token": "",
+		"client_id": ""
+	},
+	"status": {
+		"invite": true,
+		"VCjoin": true,
+		"presence": true
+	}
 }
